my local changes (#2)
* my local changes

* typing thing

* nits

--- a/src/style/PdfHighlighter.css
+++ b/src/style/PdfHighlighter.css
@@ -11,6 +11,12 @@
   left: 0;
 }
 
+.PdfHighlighter__table-layer {
+  position: absolute;
+  z-index: 3;
+  left: 0;
+}
+
 .PdfHighlighter__tip-container {
   z-index: 6;
   position: absolute;
